[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Image.tscn" type="PackedScene" id=3]
[ext_resource path="res://fast_assets/art/flecha_R.png" type="Texture" id=4]
[ext_resource path="res://fast_assets/art/flecha_U.png" type="Texture" id=5]
[ext_resource path="res://fast_assets/art/barra.jpg" type="Texture" id=6]
[ext_resource path="res://fast_assets/art/flecha_D.png" type="Texture" id=7]
[ext_resource path="res://fast_assets/art/flecha_L.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "ui_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "ui_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "ui_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "ui_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "ui_select",
"speed": 5.0
} ]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Fondo" type="ColorRect" parent="."]
margin_right = 1001.0
margin_bottom = 600.0
color = Color( 0.585938, 0.547028, 0.547028, 0.184314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="RandomTimer1" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RandomTimer2" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="RandomTimer3" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="RandomTimer4" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="TimerHUD" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Image" parent="." instance=ExtResource( 3 )]
position = Vector2( 500, 400 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "ui_down"

[connection signal="start_game1" from="HUD" to="." method="game_1"]
[connection signal="start_game2" from="HUD" to="." method="game_2"]
[connection signal="start_game3" from="HUD" to="." method="game_3"]
[connection signal="timeout" from="RandomTimer1" to="." method="_process"]
[connection signal="timeout" from="RandomTimer1" to="." method="run_game"]
[connection signal="timeout" from="RandomTimer2" to="." method="_process"]
[connection signal="timeout" from="RandomTimer2" to="." method="run_game"]
[connection signal="timeout" from="RandomTimer3" to="." method="_process"]
[connection signal="timeout" from="RandomTimer3" to="." method="run_game"]
[connection signal="timeout" from="RandomTimer4" to="." method="_process"]
[connection signal="timeout" from="RandomTimer4" to="." method="run_game"]
[connection signal="timeout" from="TimerHUD" to="." method="_on_TimerHUD_timeout"]
